# apfs-rs

./: .gitattributes  .gitignore  .travis.yml  Cargo.toml  README.md  notes.txt
.github/workflows/: rust.yml
reference/: apfs.h
src/: btree.rs  fletcher.rs  int_strings.rs  internal.rs  lib.rs
src/btree/: test.rs
src/internal/: test.rs
testdata/: btree.blob  object-map-nonroot-leaf.blob  object-map-nonroot-nonleaf.blob  object-map-root-nonleaf.blob
