[package]
name = "apfs"
version = "0.1.0"
authors = ["Loren M. Lang <lorenl@north-winds.org>"]
edition = "2018"

[dependencies]
aes = "0.8.1"
bitflags = "1.2.1"
byteorder = "1.3.1"
der = "0.5.1"
der_derive = "0.5.0"
fastpbkdf2 = "0.1.0"
hex-literal = "0.3.4"
hmac = "0.12.1"
num-derive = "0.3.2"
num-traits = "0.2.12"
sha2 = "0.10.2"
uuid = "0.8.1"
xts-mode = "0.5.0"

[features]
expensive_tests = []
